# trying-python-c-cpp-extensions

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
scripts/: build.sh
src/: fibonacci.c  raw_c_vector_sum_comparison.c  raw_c_vector_sum_size_unknown_at_compile_time.c  vec.c  vec.h
usage_examples/: fib.py  mininumpy.py  vec.py  vec_speedtest.py  vec_test.py
