[project]
name = "trying-python-c-cpp-extensions"
version = "0.1.0"
description = "Experiments with calling C libraries from Python via ctypes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
benchmark = [
  "numpy>=1.26",
]

[tool.uv]
package = false
